tests/rules/samples/check_preprocessor_protection_3.h
#ifndef CHECK_PREPROCESSOR_PROTECTION_3_H
// No #define
#endif

// Just to check that the #define is not added
#define CHECK_PREPROCESSOR_PROTECTION_3_H
